2006-12-10  Paul J Stevens <paul@nfg.nl>

	* Makefile.in, aclocal.m4, buildtools/compile, buildtools/config.guess, 
	  buildtools/config.sub, buildtools/depcomp, buildtools/install-sh, 
	  buildtools/ltmain.sh, buildtools/missing, config.in, configure, 
	  contrib/expirebox.sh, man/Makefile.in, man/dbmail-export.8, 
	  man/dbmail-imapd.8, man/dbmail-lmtpd.8, man/dbmail-pop3d.8, 
	  man/dbmail-sievecmd.8, man/dbmail-smtp.1, man/dbmail-timsieved.8, 
	  man/dbmail-users.8, man/dbmail-util.8, man/dbmail.1, 
	  man/dbmail.conf.5, modules/Makefile.in:
	add files that belong in the stable branch
	* check_dbmail_message.c, dbmail-message.c, dbmail-message.h:
	reduce copying in message code
	* list.c:
	fix minor leak

2006-12-08  Aaron Stone  <aaron@serendipity.cx>

	* misc.c:
	Fixed segfault on NULL or zero-length strings in imap_cleanup_address
	(closes bug #461).

2006-12-06  Aaron Stone  <aaron@serendipity.cx>

	* imapcommands.c:
	Fixed incorrect strlen in _ic_list (closes bug #467).
	* misc.c:
	Added # sign to AcceptedMailboxnameChars (bug #467).

2006-12-04  Paul J Stevens <paul@nfg.nl>

	* sql/mysql/create_tables.mysql, sql/mysql/migrate_from_2.0_to_2.2.mysql, 
	  sql/postgresql/create_tables.pgsql, 
	  sql/postgresql/migrate_from_2.0_to_2.2.pgsql, 
	  sql/sqlite/create_tables.sqlite:
	adding useful indexes to headername/headervalue tables
	* db.c:
	fix fallout from #457

2006-11-27  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_db.c, check_dbmail_message.c, db.c, dbmail-imapsession.c, 
	  dbmail-message.c, modules/dbpgsql.c:
	remove the query global
	* db.c:
	fix bug #457
	* debian/compat, debian/control, debian/dbmail-ldap.postinst, 
	  debian/dbmail-mysql.postinst, debian/dbmail-pgsql.postinst, 
	  debian/dbmail-sieve.config, debian/dbmail-sieve.postinst, 
	  debian/dbmail-sieve.templates, debian/dbmail-sqlite.postinst, 
	  debian/dbmail.dirs, debian/dbmail.examples, debian/dbmail.init, 
	  debian/dbmail.postinst, debian/dbmail.preinst, debian/dbmail.prerm, 