@@ -185,8 +185,8 @@
 #define AUTO_NOTIFY_SENDER "autonotify@dbmail"
 #define AUTO_NOTIFY_SUBJECT "NEW MAIL NOTIFICATION"
 
-/* Must be at least 998 or 1000 by RFC's */
-#define MAX_LINE_SIZE 1024
+/* input reading linelimit */
+#define MAX_LINESIZE (65*1024)
 
 /** default table prefix */
 #define DEFAULT_DBPFX "dbmail_"
