@@ -1,5 +1,8 @@
 2006-12-10  Paul J Stevens <paul@nfg.nl>
 
+	* check_dbmail_imapd.c, dbmail-imapsession.c, dbmail.h.in, dm_imaputil.c, 
+	  imap4.c, imapcommands.c:
+	cleanup MAX_LIZESIZE and set to 65k
 	* Makefile.in, aclocal.m4, buildtools/compile, buildtools/config.guess, 
 	  buildtools/config.sub, buildtools/depcomp, buildtools/install-sh, 
 	  buildtools/ltmain.sh, buildtools/missing, config.in, configure, 
